docs/build/zh-Hans/api/6.6/core/class/ServerException.md
# ServerException<!-- -->

Base class for all server related errors detected in the driver.

### Hierarchy

* [DriverException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/DriverException.md)

  * *ServerException*

    * [ConstraintViolationException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/ConstraintViolationException.md)
    * [DatabaseObjectExistsException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/DatabaseObjectExistsException.md)
    * [DatabaseObjectNotFoundException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/DatabaseObjectNotFoundException.md)
    * [DeadlockException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/DeadlockException.md)
    * [InvalidFieldNameException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/InvalidFieldNameException.md)
    * [LockWaitTimeoutException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/LockWaitTimeoutException.md)
    * [NonUniqueFieldNameException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/NonUniqueFieldNameException.md)
    * [ReadOnlyException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/ReadOnlyException.md)
    * [SyntaxErrorException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/SyntaxErrorException.md)

## Index[**](#Index)

### Constructors

* [**constructor](#constructor)

### Properties

* [**cause](#cause)
* [**code](#code)
* [**errmsg](#errmsg)
* [**errno](#errno)
* [**message](#message)
* [**name](#name)
* [**sqlMessage](#sqlMessage)
* [**sqlState](#sqlState)
* [**stack](#stack)
* [**stackTraceLimit](#stackTraceLimit)

### Methods

* [**captureStackTrace](#captureStackTrace)
* [**prepareStackTrace](#prepareStackTrace)

## Constructors<!-- -->[**](#Constructors)

### [**](#constructor)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/exceptions.ts#L14)constructor

* ****new ServerException**(previous): [ServerException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/ServerException.md)

- Inherited from DriverException.constructor

  #### Parameters

  * ##### previous: Error

  #### Returns [ServerException](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/ServerException.md)

## Properties<!-- -->[**](#Properties)

### [**](#cause)optionalinheritedcause

**cause?

<!-- -->

: unknown

Inherited from DriverException.cause

### [**](#code)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/exceptions.ts#L8)optionalinheritedcode

**code?

<!-- -->

: string

Inherited from DriverException.code

### [**](#errmsg)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/exceptions.ts#L12)optionalinheritederrmsg

**errmsg?

<!-- -->

: string

Inherited from DriverException.errmsg

### [**](#errno)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/exceptions.ts#L9)optionalinheritederrno

**errno?

<!-- -->

: number

Inherited from DriverException.errno

### [**](#message)inheritedmessage

**message: string

Inherited from DriverException.message

### [**](#name)inheritedname

**name: string

Inherited from DriverException.name

### [**](#sqlMessage)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/exceptions.ts#L11)optionalinheritedsqlMessage

**sqlMessage?

<!-- -->

: string

Inherited from DriverException.sqlMessage

### [**](#sqlState)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/exceptions.ts#L10)optionalinheritedsqlState

**sqlState?

<!-- -->

: string

Inherited from DriverException.sqlState

### [**](#stack)optionalinheritedstack

**stack?

<!-- -->

: string

Inherited from DriverException.stack

### [**](#stackTraceLimit)staticinheritedstackTraceLimit

**stackTraceLimit: number

Inherited from DriverException.stackTraceLimit

The `Error.stackTraceLimit` property specifies the number of stack frames collected by a stack trace (whether generated by `new Error().stack` or `Error.captureStackTrace(obj)`).

The default value is `10` but may be set to any valid JavaScript number. Changes will affect any stack trace captured *after* the value has been changed.

If set to a non-number value, or set to a negative number, stack traces will not capture any frames.

## Methods<!-- -->[**](#Methods)

### [**](#captureStackTrace)staticinheritedcaptureStackTrace

* ****captureStackTrace**(targetObject, constructorOpt): void

- Inherited from DriverException.captureStackTrace

  Creates a `.stack` property on `targetObject`, which when accessed returns a string representing the location in the code at which `Error.captureStackTrace()` was called.

  ```
  const myObject = {};
  Error.captureStackTrace(myObject);
  myObject.stack;  // Similar to `new Error().stack`
  ```

  The first line of the trace will be prefixed with `${myObject.name}: ${myObject.message}`.

  The optional `constructorOpt` argument accepts a function. If given, all frames above `constructorOpt`, including `constructorOpt`, will be omitted from the generated stack trace.

  The `constructorOpt` argument is useful for hiding implementation details of error generation from the user. For instance:

  ```
  function a() {
    b();
  }

  function b() {
    c();
  }

  function c() {
    // Create an error without stack trace to avoid calculating the stack trace twice.
    const { stackTraceLimit } = Error;
    Error.stackTraceLimit = 0;
    const error = new Error();
    Error.stackTraceLimit = stackTraceLimit;

    // Capture the stack trace above function b
    Error.captureStackTrace(error, b); // Neither function c, nor b is included in the stack trace
    throw error;
  }

  a();
  ```

  ***

  #### Parameters

  * ##### targetObject: object
  * ##### optionalconstructorOpt: Function

  #### Returns void

### [**](#prepareStackTrace)staticinheritedprepareStackTrace

* ****prepareStackTrace**(err, stackTraces): any

- Inherited from DriverException.prepareStackTrace

  * **@see**

    <https://v8.dev/docs/stack-trace-api#customizing-stack-traces>

  ***

  #### Parameters

  * ##### err: Error
  * ##### stackTraces: CallSite\[]

  #### Returns any
